src/deployment-edfi-admin-app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: edfi-admin-app
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: edfi-admin-app
  template:
    metadata:
      labels:
        app: edfi-admin-app
    spec:
      containers:
      - name: edfi-admin-app
        image: edfialliance/ods-admin-app:v2.1.0
        resources:
          limits:
            memory: "2Gi"
            cpu: "2"
        ports:
          - containerPort: 80
