src/deployment-edfi-api.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: edfi-api
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: edfi-api
  template:
    metadata:
      labels:
        app: edfi-api
    spec:
      containers:
      - name: edfi-api
        image: edfialliance/ods-api-web-api:v2.1.0
        resources:
          limits:
            memory: "2Gi"
            cpu: "2"
        ports:
          - containerPort: 80
