src/service-edfi-api.yaml

apiVersion: v1
kind: Service
metadata:
  name: edfi-api
spec: # defines the behavior of a service
  type: NodePort # determines how the Service is exposed
  selector: # route service traffic to pods with label keys and values matching this selector
    app: edfi-api
  ports:
  - port: 80 # port that will be exposed by this service
    targetPort: 80 # port to access on the pods targeted by the servic
